--- a/frontend/src/styles/App.scss
+++ b/frontend/src/styles/App.scss
@@ -12,4 +12,5 @@
 @use './tags/button.scss';
 
 //page specific
-@use './pages/home.scss'
+@use './pages/home.scss';
+@use './pages//nutrition-site.scss';
