--- a/frontend/src/styles/root.scss
+++ b/frontend/src/styles/root.scss
@@ -1,6 +1,8 @@
 //root and variables declared
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+
 :root {
-    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+    font-family: "PlayFairDisplay", "Merriweather", Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
     line-height: 1.5;
     font-weight: 400;
   
@@ -9,3 +11,11 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
   }
+
+body {
+  margin: 0;
+}
+
+main {
+  margin: 1em;
+}
